Fix PR/51288 reproducable panic on evbmips64-eb (erlite)

pmap_page_remove from the previous change neglected to terminate the pv
list correctly when it started with an initial unmanaged mapping and
subsequent managed mappings.  Fix this.